ChangeLog

Upcoming version
[TASK]    Properly type-hint IndexerBase constructor, thanks to hotbytes-dev, https://github.com/tpwd/ke_search/pull/202

Version 5.1.3, 10 November 2023
[BUGFIX]  Replace all occurences of additional word characters, not only the first one. Thanks to K. Quiatkowski. https://github.com/tpwd/ke_search/issues/19
[TASK]    Show hidden content in backend module "Indexed content" function
[DOCS]    Add hint about using the additional word characters feature for searching for @ when using InnoDB
[BUGFIX]  Fix regression introduced in version 5.0.0 which made empty searches slow because tags were fetched too often, thanks to Stephan Bauer, https://github.com/tpwd/ke_search/issues/4

Version 5.1.2, 27 October 2023
[BUGFIX]  Keep the original value for "loadFlexformsFromOtherCE" even if the search box plugin has an empty value in the FlexForm which lead to empty search results, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/142

Version 5.1.1, 27 October 2023
[BUGFIX]  Fix regression introduced in 5.1.0 (search was always empty), https://github.com/tpwd/ke_search/issues/195

Version 5.1.0, 20 October 2023
[FEATURE] Additional word characters: Allows searching for words containing e.g. dots or hyphens, https://github.com/tpwd/ke_search/issues/19
[TASK]    Exclude all parameters (including filters) from cHash calculation, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/187
[BUGFIX]  Allow to use 'loadFlexformsFromOtherCE' parameter for TypoScript-instantiated plugins, thanks to Garvin Hicking, https://github.com/tpwd/ke_search/pull/152
[BUGFIX]  Avoid undefined array key "sortWithoutSearchword", "resultsPerPage" and "noResultsText", https://github.com/tpwd/ke_search/issues/151
[BUGFIX]  Avoid slow TYPO3 backend list view due to missing sql index, thanks to Daniel Siepmann, https://github.com/tpwd/ke_search/issues/190