@@ -2,6 +2,7 @@ ChangeLog
 
 Upcoming version
 [TASK]    Properly type-hint IndexerBase constructor, thanks to hotbytes-dev, https://github.com/tpwd/ke_search/pull/202
+[BUGFIX]  Avoid undefined array key warning for "sphinxLimit"
 
 Version 5.1.3, 10 November 2023
 [BUGFIX]  Replace all occurences of additional word characters, not only the first one. Thanks to K. Quiatkowski. https://github.com/tpwd/ke_search/issues/19
